# SciNet

./: .env.example  .gitignore  README.md  README_zh.md  requirements.txt  run_scinet.py
.github/workflows/: pages.yml
docs/api/: SCINET_API_DOC.html  SCINET_API_DOC_zh.html  index.html
examples/: author_profile_request.json  grounded_review_params.cpu.example.json  grounded_review_params.example.json  grounded_review_request.json  idea_generation_request.json  related_authors_request.json  topic_trend_review_request.json
references/: README.md
references/search/: .env.example  .gitignore  README.md  run_search.py
references/search/src/innoeval_search/: __init__.py  cli.py
references/search/tests/: conftest.py  test_merge_search.py  test_search_s2_modes.py
scinet/: .env.example  .gitignore  MANIFEST.in  README.md  README_skills.md  cli.py  pyproject.toml
scinet/core/: __init__.py  api_client.py  common.py  schemas.py
scinet/evidence/: __init__.py  grounding.py  pdf_manifest.py  utils.py
scinet/examples/: idea_evaluate.sh  literature_review.sh  search_papers.sh
scinet/llm/: __init__.py  base.py  client.py  openai_compatible.py  prompts.py
scinet/renderers/: __init__.py  markdown.py
scinet/search/: __init__.py  planner.py  reranker.py
scinet/src/scinet/: __init__.py  builtin_skills.json  cli.py  client.py  config.py  skills.py
scinet/tasks/: __init__.py  _shared.py  author_profile.py  dispatcher.py  grounded_review.py  idea_generation.py  related_authors.py  topic_trend_review.py
scinet/tests/: test_import.py
tests/: test_scinet.py
(+25 files in other folders)
